--- a/source/R5T.Hladir.CSharp.Standard.Construction/R5T.Hladir.CSharp.Standard.Construction.csproj
+++ b/source/R5T.Hladir.CSharp.Standard.Construction/R5T.Hladir.CSharp.Standard.Construction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\R5T.Hladir.CSharp.Standard\R5T.Hladir.CSharp.Standard.csproj" />
   </ItemGroup>
